--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "scripts": {
-    "dev": "npx tailwindcss -i ./style.css -o ./output.css --watch"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.13"
+  "dependencies": {
+    "swiper": "^11.1.14"
   }
 }
